Pass --ignore-missing-imports to mypy

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
   - pip install -r requirements.txt
   - pip install -r tests/requirements.txt
 script:
-  - mypy rocketchat
+  - mypy rocketchat --ignore-missing-imports
